--- a/styles.css
+++ b/styles.css
@@ -1317,6 +1317,13 @@ body {
     line-height: 1.4;
 }
 
+.linklock-content .subtitle {
+    font-size: 1.2rem;
+    color: #666;
+    margin: 1.5rem 0 0.25rem 0;
+    line-height: 1.4;
+}
+
 .linklock-content h4 {
     font-size: 1.2rem;
     font-weight: 600;
