--- a/styles.css
+++ b/styles.css
@@ -1563,6 +1563,7 @@ body {
         content: url('linklock-mobile.png');
         height: auto;
         object-fit: contain;
+        box-shadow: none;
     }
 }
 
